Ajout de l'authentfication

--- a/GestionProduits/GestionProduits.csproj
+++ b/GestionProduits/GestionProduits.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="itext.bouncy-castle-adapter" Version="9.0.0" />
+    <PackageReference Include="itext7" Version="9.0.0" />
+    <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="Npgsql" Version="9.0.2" />
   </ItemGroup>
 
